plugins {
    id 'eclipse'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '5.1.+'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
    id 'org.spongepowered.mixin' version '0.7.+'
}

archivesBaseName = "cgm-plus"
version = "1.0"
group = "com.mrcrayfish"

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

mixin {
    add sourceSets.main, "cgm.refmap.json"
    config 'cgm.mixins.json'
}

minecraft {
    mappings channel: 'parchment', version: '2022.08.14-1.19.2'
    runs {
        client {
            workingDirectory project.file('run')
            property 'mixin.env.disableRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
            property 'forge.logging.console.level', 'debug'
            mods {
                cgm {
                    source sourceSets.main
                }
            }
        }
        server {
            workingDirectory project.file('run')
            property 'mixin.env.disableRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
            property 'forge.logging.console.level', 'debug'
            arg '-mixin.config=cgm.mixins.json'
            mods {
                cgm {
                    source sourceSets.main
                }
            }
        }
        data {
            workingDirectory project.file('run')
            property 'mixin.env.disableRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
            property 'forge.logging.console.level', 'debug'
            args '--mod', 'cgm', '--all', '--output', file('src/generated/resources/')
            arg '-mixin.config=cgm.mixins.json'
            mods {
                cgm {
                    source sourceSets.main
                }
            }
        }
    }
}

repositories {
    mavenLocal()
    maven {
        url "https://www.cursemaven.com"
    }
    maven {
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.19.2-43.4.20'

    implementation fg.deobf("curse.maven:embeddium-908741:5539178")
    implementation fg.deobf("curse.maven:magnesium-extras-558905:4632201")

    implementation fg.deobf('curse.maven:framework-549225:4718247')
    implementation fg.deobf("curse.maven:create-328085:4835190")
    implementation fg.deobf("curse.maven:farmers-delight-398521:5051241")
    implementation fg.deobf("curse.maven:create-diesel-generators-869316:5089750")
    implementation fg.deobf("curse.maven:sulfur-and-potassium-make-more-gunpowder-295506:3932473")
    implementation fg.deobf('curse.maven:configured-457570:4011355')
    implementation fg.deobf('curse.maven:catalogue-459701:4171024')
    implementation fg.deobf('curse.maven:backpacked-352835:3923045')
    implementation fg.deobf("curse.maven:dynamiclights-reforged-551736:4285414")
    implementation fg.deobf("curse.maven:dynamictrees-252818:5600544")

    implementation fg.deobf("curse.maven:collective-342584:5363789")
    implementation fg.deobf("curse.maven:extended-creative-inventory-411224:4397639")
    implementation fg.deobf("curse.maven:torohealth-damage-indicators-245733:3895068")
    implementation fg.deobf("curse.maven:jade-324717:4914105")
    implementation fg.deobf("curse.maven:mouse-tweaks-60089:3871353")
    implementation fg.deobf("curse.maven:client-tweaks-251407:4751800")
    implementation fg.deobf("curse.maven:balm-531761:4751735")
    implementation fg.deobf("curse.maven:better-mods-button-541584:4665753")
    implementation fg.deobf("curse.maven:xaeros-world-map-317780:6538331")
    implementation fg.deobf("curse.maven:xaeros-minimap-263420:6515017")
    implementation fg.deobf("curse.maven:goprone-327968:3884694")
    implementation fg.deobf("curse.maven:ibe-editor-256822:4216136")
    implementation fg.deobf("curse.maven:curios-309927:5843737")
    implementation fg.deobf("curse.maven:bookshelf-228525:4556697")
    //implementation fg.deobf("curse.maven:enchantment-descriptions-250419:4277356")
    //implementation fg.deobf("curse.maven:explosive-enhancement-reforged-1036246:5554087")
    //implementation fg.deobf("curse.maven:artifacts-312353:5384768")
    //implementation fg.deobf("curse.maven:selene-499980:5567102")
    //implementation fg.deobf("curse.maven:supplementaries-412082:5152602")

    implementation fg.deobf("curse.maven:shoulder-surfing-reloaded-243190:5441683")
    compileOnly fg.deobf('curse.maven:controllable-317269:3936915')
    compileOnly fg.deobf("mezz.jei:jei-1.19.2-common-api:11.4.0.274")
    compileOnly fg.deobf("mezz.jei:jei-1.19.2-forge-api:11.4.0.274")
    runtimeOnly fg.deobf("mezz.jei:jei-1.19.2-forge:11.4.0.274")
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

jar {
    manifest {
        attributes([
                "Specification-Title": "CGM+",
                "Specification-Vendor": "An0m3L1",
                "Specification-Version": "1.0",
                "Implementation-Title": "CGM+",
                "Implementation-Version": project.version,
                "Implementation-Vendor" : "An0m3L1",
                "Implementation-Timestamp": new Date().format("yyyy-dd-MM'T'HH:mm:ssZ"),
                "MixinConfigs": "cgm.mixins.json"
        ])
    }
}

jar.finalizedBy('reobfJar')

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file:///X:/localmaven/mcmods"
        }
    }
}
